src/test/06-Errors/error-static-init-member-v.txt
error-static-init-member-v.ck:12:5: error: cannot access non-static variable 'Foo.n' to initialize a static variable
[12]     n + m => static int THE_NUM;
         ^
